// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button color error 1`] = `
<button
  class="button button--error button--medium"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button color info 1`] = `
<button
  class="button button--info button--medium"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button color primary 1`] = `
<button
  class="button button--primary button--medium"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button color success 1`] = `
<button
  class="button button--success button--medium"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button color warning 1`] = `
<button
  class="button button--warning button--medium"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default custom className 1`] = `
<button
  class="button button--default button--medium test-class"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default disabled 1`] = `
<button
  class="button button--default button--medium"
  data-testid="button"
  disabled=""
>
  Click
</button>
`;

exports[`Test Button default large 1`] = `
<button
  class="button button--default button--large"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default link 1`] = `
<button
  class="button button--default button--medium is-link"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default onClick 1`] = `
<button
  class="button button--default button--medium"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default plain 1`] = `
<button
  class="button button--default button--medium is-plain"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default round 1`] = `
<button
  class="button button--default button--medium is-round"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default small 1`] = `
<button
  class="button button--default button--small"
  data-testid="button"
>
  Click
</button>
`;

exports[`Test Button default without attr 1`] = `
<button
  class="button button--default button--medium"
  data-testid="button"
>
  Click
</button>
`;
